<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cotorra</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="error">Error</string>
    <string name="name">Name</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>

    <string name="signup_name_error">Incorrect name</string>
    <string name="signup_email_error">Email not valid</string>
    <string name="signup_password_error">Password length less than 6 characters</string>

    <string name="hint_type_message">Type your message</string>
    <string name="send_button">Send</string>

</resources>
